--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,12 @@
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  html {
-    @apply font-sans;  
-  }
-  h1 {
-    @apply text-3xl font-semibold;
-  }
-  h2 {
-    @apply text-xl;
-  }
-  h3 {
-    @apply text-lg;
-  }
-  a {
-    @apply text-blue-900 font-semibold;
-  }
+table, th, td {
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+}
+
+th, td {
+  padding-left: 3px;
+  padding-right: 3px;
 }
